ana başlıklar eklendi

--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
     <title>Zeki Şahmaran</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Zeki Şahmaran</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+1. Kişisel Bilgiler
+
+Ad Soyad
+
+Telefon numarası
+
+E-posta adresi (profesyonel olmalı, örn: ad.soyad@gmail.com
+)
+
+(İsteğe bağlı) LinkedIn, GitHub, kişisel web sitesi
+
+2. Özet (Summary / Objective)
+
+2–3 cümlelik kısa bir bölüm
+
+Hedeflerin, güçlü yanların ve işverene ne katabileceğini belirtir.
+
+3. Eğitim (Education)
+
+Okul adı, bölüm, tarih
+
+Mezuniyet notu (isteğe bağlı, yüksekse ekle)
+
+4. Deneyim (Experience / Work History)
+
+Şirket adı, pozisyon, tarih
+
+Görevler ve başarılar (mümkünse ölçülebilir sonuçlarla → “%20 satış artışı sağladım” gibi)
+
+5. Yetenekler (Skills)
+
+Teknik beceriler: (ör. Python, Photoshop, AutoCAD…)
+
+Sosyal beceriler: (ör. iletişim, liderlik, problem çözme)
+
+6. Projeler (Projects)
+
+Katıldığın veya geliştirdiğin projeler (özellikle öğrenciysen çok faydalı)
+
+Kısa açıklama + kullanılan teknolojiler
+
+7. Sertifikalar & Kurslar (Certificates & Courses)
+
+Online kurslar (Coursera, Udemy, Google, Microsoft vs.)
+
+Resmî sertifikalar
+
+8. Diller (Languages)
+
+Anadilin + yabancı diller (seviyesiyle: A1–C2 ya da “Beginner/Intermediate/Fluent”)
+
+9. (Opsiyonel) Ek Bölümler
+
+Gönüllülük / Kulüp Üyelikleri
+
+Hobiler & İlgi Alanları (sadece işverene artı değer katacaks
+
+    </main>
+    <footer>
+    </footer> 
 </body>
+
+
 </html>
