--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Zeki Şahmaran</title> 
 <style>
 .social-nav {
@@ -38,12 +40,17 @@
 .social-nav a:hover {
   color: #0077b5; /* LinkedIn mavisi gibi */
 }
+html, body {
+    width: 100%;   
+    padding: 0;
+}
 
     body {
   background-color: #0a1725;
     color: #ede7ed;
     text-align: center;
     font-family: Arial, sans-serif;
+    overflow-x: hidden;
 }
 #profileImage {
     height: 150px;
@@ -61,7 +68,7 @@
 .container {
     max-width: 800px;
     margin: 0 auto;
-
+    width: 100%
 }
 main {
     background-color: #1a2535;
@@ -88,11 +95,36 @@ section h2 {
     position: fixed;
     bottom: 20px;
     right: 20px;
-
+    z-index: 1;
 }
 #whatsappBtn img {
-   
+    
     height: 60px;
+
+}
+iframe {
+    width: 100%;
+}
+@media (max-width: 600px) {
+  .social-nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .social-nav li {
+    display: block;
+    margin: 10px 0;
+  }
+
+  .social-nav a {
+    font-size: 16px;
+  }
+
+  .social-nav a img {
+    width: 20px;
+    margin-right: 6px;
+  }
 
 }
 </style>
@@ -100,7 +132,7 @@ section h2 {
 <body>
     <div class="container">
         <header>
-            <img src="profile.jpeg" alt="başvuru" id="profileImage">
+            <img src="img/profile.jpeg" alt="başvuru" id="profileImage">
             <h1>Zeki Şahmaran</h1>
             <p>✆ +90 533 889 19 18 - ✉ zekisahmaran2409@gmail.com</p>
         </header>
@@ -170,38 +202,98 @@ section h2 {
                 <ul>
                     <li>
                         <a href="https://github.com/zekisahmaran2409-rgb" target="_blank">
-                            <img src="github.png">
+                            <img src="img/github.png">
                             GitHub
                         </a>
                     </li>
                     <li>
                         <a href="https://instagram.com/zekisahmaran" target="_blank">
-                           <img src="instagram.png">
+                           <img src="img/instagram.png">
                             Instagram
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/Zeki.sahmaran" target="_blank">
-                            <img src="facebook.png">
+                            <img src="img/facebook.png">
                             facebook 
                         </a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/@zekisahmaran" target="_blank">
-                          <img src="youtube.png">  
+                          <img src="img/youtube.png">  
                           youtube
                          </a>
                     </li>
                 </ul>
             </nav> 
         </footer> 
+        <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/g8hjiOzS2z4?si=Bu0gFD_mH6M20_eO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div class="carousel-item">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3256.8551301285875!2d33.239795575573275!3d35.284727972717874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14de0de42ebf9dc7%3A0xd167d626ecd0cbd!2sCypriana%20Restaurant!5e0!3m2!1str!2s!4v1755690478259!5m2!1str!2s" width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
     </div>
     <a href="https://wa.me/905338891918" target="_blank" id="whatsappBtn">
-         <img src="whatsapp.png">
-        </a>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/g8hjiOzS2z4?si=Bu0gFD_mH6M20_eO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3256.8551301285875!2d33.239795575573275!3d35.284727972717874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14de0de42ebf9dc7%3A0xd167d626ecd0cbd!2sCypriana%20Restaurant!5e0!3m2!1str!2s!4v1755690478259!5m2!1str!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</body>
+         <img src="img/whatsapp.png">
+    </a>
+    <a href="/about" class="btn btn-primary">Warning</a>
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Accordion Item #1
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Accordion Item #2
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+</div>
+ 
+<div class="alert alert-info" role="alert">
+  A simple info alert—check it out!
+</div>
+  </body>
 </html>
 
            
