Replace YouTube video in carousel with new link

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ iframe {
         <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/g8hjiOzS2z4?si=Bu0gFD_mH6M20_eO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CEnlXtpEZ34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="carousel-item">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3256.8551301285875!2d33.239795575573275!3d35.284727972717874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14de0de42ebf9dc7%3A0xd167d626ecd0cbd!2sCypriana%20Restaurant!5e0!3m2!1str!2s!4v1755690478259!5m2!1str!2s" width="560" height="315" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
