Youtube alanı değişiklik

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
 
         <section>
-            <h2 class="text-center">Dijital Portfolyo & Tanıtım</h2>
+            <h2 class="text-center">YouTube Kanalım</h2>
             <div class="video-wrapper ratio ratio-16x9">
                 <iframe 
                     src="https://www.youtube.com/embed/CEnIXtpEZ34" 
