--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function changeNeonColor(){
 const img=document.getElementById('profileImage');
 colorIndex=(colorIndex+1)%colors.length;
 img.style.borderColor=colors[colorIndex];
-img.style.boxShadow=0 0 25px ${colors[colorIndex]};
+img.style.boxShadow=`0 0 25px ${colors[colorIndex]}`;
 }
 </script>
 
